--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* full page styling */
 body {
-    background-color: #faf8ef;
-    color: #776E65;
+    background-color: #FFC0CB; /* light pink */
+    color: #6495ED; /* cornflower blue */
     font-family: Arial, Helvetica, sans-serif;
     padding-top: 2%;
 }
@@ -26,8 +26,8 @@ h1#title {
 div#score-container {
     position: relative;
     float: right;
-    background-color: #776E65;
-    color: rgb(205, 192, 180);
+    background-color: #6495ED; /* cornflower blue */
+    color: #FFC0CB; /* light pink */
     height: 25px;
     padding: 15px 20px;
     padding-bottom: 30px;
@@ -35,11 +35,11 @@ div#score-container {
     text-align: center;
 }
 
-/*  numeric score */
+/* numeric score */
 div#score {
     font-weight: bold;
     font-size: 25px;
-    color: white;
+    color: #FFC0CB; /* light pink */
 }
 
 /* instructions subheader */
@@ -52,4 +52,3 @@ p#instructions {
 span {
     font-weight: bold;
 }
-
